// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trae -> get get -> params makes a GET request to baseURL + path using a nested object as params 1`] = `
Object {
  "config": Object {
    "headers": Object {},
    "method": "GET",
    "params": Object {
      "a": Object {
        "b": "c",
      },
    },
    "url": "http://localhost:8080/api/foo?a%5Bb%5D=c",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> get get -> params makes a GET request to baseURL + path using params 1`] = `
Object {
  "config": Object {
    "headers": Object {},
    "method": "GET",
    "params": Object {
      "foo": "bar",
      "key": 123,
      "token": "12345lkjhpor837",
    },
    "url": "http://localhost:8080/api/foo?foo=bar&key=123&token=12345lkjhpor837",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> get makes a GET request to baseURL + path 1`] = `
Object {
  "config": Object {
    "headers": Object {},
    "method": "GET",
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> get makes a GET request with raw bodyType and get the body without being parsed 1`] = `
Object {
  "config": Object {
    "bodyType": "raw",
    "headers": Object {},
    "method": "GET",
    "url": "http://localhost:8080/api/foo",
  },
  "data": "{\\"foo\\":\\"bar\\"}",
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;
